samples/_failures_safe/1761004622_f60628_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fc300d46.c: In function ‘print_errors’:
./samples/SAFE/__tmp_fc300d46.c:153:32: error: expected declaration or statement at end of input
  153 | void print_errors(const struct LogAnalyzer *analyzer) {
      |                                ^~~~~~~~~~~
